<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">

            <item
                android:id="@+id/home"
                android:title="@string/home"
                android:icon="@drawable/home"/>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/settings_icon"
                android:title="@string/settings" />
         <item
                android:id="@+id/contact"
                android:icon="@drawable/contact_icon"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/person_icon"
                android:title="@string/about_us" />
         <item
                android:id="@+id/logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout" />
        </group>
</menu>